Fixed one last spacing issue.

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -272,7 +272,7 @@ address {
 
 .services-bottom-content {
 	display: flex;
-	padding-top: 25px;
+	padding-top: 30px;
 }
 
 .services-bottom-content img {
